tests/cfg/js/success/compile_args7.js
function f110(x, arguments, y) {
  function arguments(z) {}
  arguments = 2;
}
